plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.7'
    id 'java-library-distribution'
}

sourceCompatibility = 11

javafx {
    // version = "11.0.2"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base', 'javafx.swing' ]
}

// this vm argument is important to make the "controlsfx" dependency work 
applicationDefaultJvmArgs = ["--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"]

mainClassName = 'de.hfu.pms.Main'

jar {
    manifest {
        attributes 'Main-Class': 'de.hfu.pms.Main'
    }
    from { (configurations.runtime).collect { it.isDirectory() ? it : zipTree(it) } }
}

dependencies {
    compile project(':pms-core')
    
    compile group: 'com.google.guava', name: 'guava', version: '27.1-jre'
    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.8'

    compile group: 'log4j', name: 'log4j', version: '1.2.17'
    compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.0'

    compile 'org.kordamp.ikonli:ikonli-javafx:11.3.4'
    compile 'org.kordamp.ikonli:ikonli-fontawesome-pack:11.3.4'
    compile 'org.kordamp.ikonli:ikonli-dashicons-pack:11.3.4'

    // https://mvnrepository.com/artifact/commons-io/commons-io
    compile group: 'commons-io', name: 'commons-io', version: '2.5'
    
    testCompile group: 'junit', name: 'junit', version: '4.12'
}




